fixed setting in web pages

--- a/ncxa.html
+++ b/ncxa.html
@@ -26,6 +26,10 @@ var map = L.mapbox.map('map', 'mapbox.streets')
 var featureLayer = L.mapbox.featureLayer()
     .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA.geojson')
     .addTo(map);
+//Add Layers seem to be possible
+//var featureLayer = L.mapbox.featureLayer()
+//    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_135_162.geojson')
+//    .addTo(map);
 </script>
 </body>
 </html>
