Geojson implementation of track with link

--- a/ncxa.html
+++ b/ncxa.html
@@ -27,9 +27,9 @@ var featureLayer = L.mapbox.featureLayer()
     .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA.geojson')
     .addTo(map);
 //Add Layers seem to be possible
-//var featureLayer = L.mapbox.featureLayer()
-//    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_135_162.geojson')
-//    .addTo(map);
+var featureLayer = L.mapbox.featureLayer()
+    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/TRACK_WITH_LINK.geojson')
+    .addTo(map);
 </script>
 </body>
 </html>
