--- a/ncxa.html
+++ b/ncxa.html
@@ -12,6 +12,10 @@
 </style>
 </head>
 <body>
+
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v0.0.4/Leaflet.fullscreen.min.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v0.0.4/leaflet.fullscreen.css' rel='stylesheet' />
+
 <div id='map'></div>
 
 <script>
@@ -19,6 +23,7 @@ L.mapbox.accessToken = 'pk.eyJ1IjoicmVzdHJlcG8iLCJhIjoiNDQwZGE1ZGJjNGQzOWZmOGI3M
 var map = L.mapbox.map('map', 'mapbox.streets')
     .setView([6.2308, -75.5906], 9);
 
+L.control.fullscreen().addTo(map);
 // As with any other AJAX request, this technique is subject to the Same Origin Policy:
 // http://en.wikipedia.org/wiki/Same_origin_policy
 // So the CSV file must be on the same domain as the Javascript, or the server
