--- a/ncxa.html
+++ b/ncxa.html
@@ -28,19 +28,19 @@ L.control.fullscreen().addTo(map);
 // http://en.wikipedia.org/wiki/Same_origin_policy
 // So the CSV file must be on the same domain as the Javascript, or the server
 // delivering it should support CORS.
-var featureLayer = L.mapbox.featureLayer()
-    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_1_100.geojson')
-    .addTo(map);
+//var featureLayer = L.mapbox.featureLayer()
+//    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_1_100.geojson')
+//    .addTo(map);
 //Add Layers seem to be possible
-var featureLayer = L.mapbox.featureLayer()
-    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_101_200.geojson')
-    .addTo(map);
+//var featureLayer = L.mapbox.featureLayer()
+//    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_101_200.geojson')
+//    .addTo(map);
 var featureLayer = L.mapbox.featureLayer()
     .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_201_225.geojson')
     .addTo(map);
-var featureLayer = L.mapbox.featureLayer()
-    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_226_300.geojson')
-    .addTo(map);
+//var featureLayer = L.mapbox.featureLayer()
+//    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_226_300.geojson')
+//    .addTo(map);
 </script>
 </body>
 </html>
