--- a/ncxaol.html
+++ b/ncxaol.html
@@ -27,13 +27,38 @@
           zoom: 4
         })
       });
-      geojson_layer = new OpenLayers.Layer.Vector("GeoJSON", {
+//      geojson_layer = new OpenLayers.Layer.Vector("GeoJSON", {
+//            strategies: [new OpenLayers.Strategy.Fixed()],
+//            protocol: new OpenLayers.Protocol.HTTP({
+//                url: "NCXA_1_100.geojson",
+//                format: new OpenLayers.Format.GeoJSON()
+//            })
+//        });
+    </script>
+    <script>
+var map = new OpenLayers.Map({
+    div: "map",
+    layers: [
+        new OpenLayers.Layer.WMS(
+            "WMS", "http://vmap0.tiles.osgeo.org/wms/vmap0",
+            {layers: "basic"}
+        ),
+        new OpenLayers.Layer.Vector("KML", {
             strategies: [new OpenLayers.Strategy.Fixed()],
             protocol: new OpenLayers.Protocol.HTTP({
-                url: "NCXA_1_100.geojson",
-                format: new OpenLayers.Format.GeoJSON()
+                url: "map_all_1_100.kml",
+                format: new OpenLayers.Format.KML({
+                    extractStyles: true, 
+                    extractAttributes: true,
+                    maxDepth: 2
+                })
             })
-        });
+        })
+    ],
+    center: new OpenLayers.LonLat(-112.169, 36.099),
+    zoom: 11
+});
     </script>
+    
   </body>
 </html>
