--- a/ncxa.html
+++ b/ncxa.html
@@ -32,14 +32,17 @@ var featureLayer = L.mapbox.featureLayer()
     .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_1_100.geojson')
     .addTo(map);
 //Add Layers seem to be possible
+//var featureLayer = L.mapbox.featureLayer()
+//    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_101_200.geojson')
+//    .addTo(map);
+//var featureLayer = L.mapbox.featureLayer()
+//    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_201_2//25.geojson')
+//    .addTo(map);
+//var featureLayer = L.mapbox.featureLayer()
+//    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_226_3//00.geojson')
+//    .addTo(map);
 var featureLayer = L.mapbox.featureLayer()
-    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_101_200.geojson')
-    .addTo(map);
-var featureLayer = L.mapbox.featureLayer()
-    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_201_225.geojson')
-    .addTo(map);
-var featureLayer = L.mapbox.featureLayer()
-    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_226_300.geojson')
+    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_all.geojson')
     .addTo(map);
 </script>
 </body>
