--- a/ncxa.html
+++ b/ncxa.html
@@ -31,6 +31,9 @@ L.control.fullscreen().addTo(map);
 var featureLayer = L.mapbox.featureLayer()
     .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_1_100.geojson')
     .addTo(map);
+var featureLayer = L.mapbox.featureLayer()
+    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_last_track.geojson')
+    .addTo(map);
 //Add Layers seem to be possible
 //var featureLayer = L.mapbox.featureLayer()
 //    .loadURL('https://raw.githubusercontent.com/rescolo/ncxa/master/NCXA_101_200.geojson')
