--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
             </div>
             <div class="text">
                 <h3>Nuevos caminos por Antioquia</h3>
-                <p>Haga click sobre el camino para abrir la ruta en <a href="http://www.wikiloc.com/">wikiloc</a> y sobre el icono <img src="icono.png" alt="Abrir in wikiloc" height="15"> para ver detalles.</p>
-
+                <p>Todas la rutas de <a href="http://www.wikiloc.com/wikiloc/user.do?id=472831">Wikiloc</a></p>
+                <ul>
+                <li>Haga click sobre el camino para abrir la ruta en <a href="http://www.wikiloc.com/wikiloc/user.do?id=472831">wikiloc</a> </li>
+                <li>Sobre el icono <img src="icono.png" alt="Abrir in wikiloc" height="15"> para ver detalles.</li>
+                <li><a href="http://gfif.udea.edu.co/ncxa/ncxa.html">Pantalla completa: <img src="img/fs.png" alt="Fullscreen" height="20px"/> </a> </li>       
+</ul>
 		<p style="text-align: center;">
-			<a class="action_button" href="gnome-3">Total: 12867 km</a>
-			<a class="action_button" href="getting-gnome">Desnivel: 154661 m</a>
+			<a class="action_button" href="http://www.wikiloc.com/wikiloc/user.do?id=472831&event=stats">Total: 12867 km</a>
+			<a class="action_button" href="http://www.wikiloc.com/wikiloc/user.do?id=472831&event=stats">Desnivel: 154661 m</a>
                  <small> <a class="action_button" href="https://www.facebook.com/NCXAntioquia">&#169; NCX Antioquia</a></small>
                   </p>
                  </div>
