--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <li id="menu-item-3995" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3995"><a href="https://github.com/rescolo/ncxa">GitHub</a></li>
 </ul></div>                            </div>
             <div class="right">
-                <form role="search" method="get" id="searchform" action="https://www.gnome.org/" >
+                <form role="search" method="get" id="searchform" action="https://www.google.com.co/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=site:http:%2F%2Fwww.wikiloc.com+Oscar+Upegui+" >
                     <div>
                         <label class="hidden" for="s">Search: </label><input type="text" value="" name="s" id="s" placeholder="Search" />
                     </div>
