--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="text">
                 <h3>Nuevos caminos por Antioquia</h3>
-                <h4>Rutas de ciclomontañismo</h4>
+                <h4>Rutas de ciclomonta&ntilde;ismo</h4>
                 <p>Todas la rutas de <a href="http://www.wikiloc.com/wikiloc/user.do?id=472831">Wikiloc</a></p>
                 <ul>
                 <li>Haga click sobre el camino para abrir la ruta en <a href="http://www.wikiloc.com/wikiloc/user.do?id=472831">wikiloc</a> </li>
