--- a/links.html
+++ b/links.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head>
+  <title>NCXA links</title>
+  <meta charset="utf-8">
+</head>
+<body>
 <ul>
  <li>
    <a href="http://www.mybike.com.co/tecnica/cadencia-velocidad-y-cambios-como-usar-los-pinones-en-ciclismo-de-ruta/">Cadencia, velocidad y cambios: cómo usar los piñones en ciclismo de ruta</a>
@@ -5,3 +13,5 @@
  <li><a href="http://www.mybike.com.co/equipamiento/evita-dolores-ocasionados-por-el-asiento-de-tu-bicicleta/#sthash.P6QW8yll.dpuf">Evita dolores ocasionados por el asiento de tu Bicicleta</a>
     </li>
 </ul>
+</body>
+</html>
