--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div id="top_bar" class="grid_9">
             <div class="left">
-                <div class="menu-globalnav-container"><ul id="menu-globalnav" class="menu"><li id="menu-item-1039" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1039"><a href="http://gfif.udea.edu.co/ncxa">NCX Antioquia</a></li>
-<li id="menu-item-1037" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1037"><a href="http://gfif.udea.edu.co/ncxa/ncxa.html">Mapbox<img src="img/fs.png" alt="Fullscreen" height="20px"/></a></li>
+                <div class="menu-globalnav-container"><ul id="menu-globalnav" class="menu"><li id="menu-item-1039" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1039"><a href="http://ncxa.co">NCX Antioquia</a></li>
+<li id="menu-item-1037" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1037"><a href="http://ncxa.co/ncxa.html">Mapbox<img src="img/fs.png" alt="Fullscreen" height="20px"/></a></li>
 <li id="menu-item-1040" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1040"><a href="https://www.google.com/maps/d/embed?mid=z2NCe4lIOjVA.kgQgTDLLMHfw">My Maps</a></li>
 <li id="menu-item-1038" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1038"><a href="http://www.wikiloc.com/wikiloc/user.do?id=472831">Wikiloc</a></li>
 <li id="menu-item-3995" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3995"><a href="https://www.facebook.com/NCXAntioquia">Facebook</a></li>
@@ -48,7 +48,7 @@
             <div class="image">
                <!--<iframe src="https://www.google.com/maps/d/u/0/embed?mid=z2NCe4lIOjVA.kgQgTDLLMHfw" width="100%" height="100%"></iframe>-->
                <!--<iframe frameborder="0" width="100%" height="85%" src="http://bl.ocks.org/d/48aed2e6bb0852fafac9"></iframe> -->
-               <iframe frameborder="0" width="100%" height="550px" src="http://gfif.udea.edu.co/ncxa/ncxa.html"></iframe>
+               <iframe frameborder="0" width="100%" height="550px" src="http://ncxa.co/ncxa.html"></iframe>
             </div>
             <div class="text">
                 <h3>Nuevos caminos por Antioquia</h3>
@@ -57,7 +57,7 @@
                 <ul>
                 <li>Haga click sobre el camino para abrir la ruta en <a href="http://www.wikiloc.com/wikiloc/user.do?id=472831">wikiloc</a> </li>
                 <li>Sobre el icono <img src="icono.png" alt="Abrir in wikiloc" height="15"> para ver detalles.</li>
-                <li><a href="http://gfif.udea.edu.co/ncxa/ncxa.html">Pantalla completa: <img src="img/fs.png" alt="Fullscreen" height="20px"/> </a> </li>       
+                <li><a href="http://ncxa.co/ncxa.html">Pantalla completa: <img src="img/fs.png" alt="Fullscreen" height="20px"/> </a> </li>       
 </ul>
 		<p style="text-align: center;">
 			<a class="action_button" href="http://www.wikiloc.com/wikiloc/user.do?id=472831&event=stats">Total: 12867 km</a>
@@ -156,19 +156,5 @@ var WPGroHo = {"my_hash":""};
 	_stq.push([ 'view', {v:'ext',j:'1:3.7',blog:'72405960',post:'547',tz:'0',srv:'www.gnome.org'} ]);
 	_stq.push([ 'clickTrackerInit', '72405960', '547' ]);
 </script>
-<!-- END container -->
-<!--
-<center>
-<h1>Nuevos Caminos por Antioquia</h1>
-Haga click sobre el camino para abrir la ruta en <a href="http://www.wikiloc.com/">wikiloc</a> y sobre el icono <img src="icono.png" alt="Abrir in wikiloc" height="15"> para ver detalles.
-<div id='Distance'>Total recorrido: 12867 km.</div> <div id='Desnivel'>Desnivel total: 154661 metros</div> (<a href="http://geojson.io/#id=github:rescolo/ncxa/blob/master/NCXA_201_225.geojson&map=10/6.1610/-75.1808"> Edit<a/>) [<a href="https://www.google.com/maps/d/embed?mid=z2NCe4lIOjVA.kgQgTDLLMHfw">Google Maps</a>] [<a href="https://diegorestrepo.cartodb.com/viz/b142ee1c-4cd2-11e5-8c4e-0e8dde98a187/public_map">CartoDB</a>] [<a href="http://gfif.udea.edu.co/ncxa/ncxa.html">Fullscreen</a>] [<a href="https://github.com/rescolo/ncxa">GitHub</a>]
--->
-<!-- <iframe src="https://www.google.com/maps/d/u/0/embed?mid=z2NCe4lIOjVA.kgQgTDLLMHfw" width="80%" height="90%"></iframe> -->
-<!--<iframe frameborder="0" width="100%" height="85%" src="http://bl.ocks.org/d/48aed2e6bb0852fafac9"></iframe> -->
-<!--
-<iframe frameborder="0" width="100%" height="85%" src="http://gfif.udea.edu.co/ncxa/ncxa.html"></iframe><br/>
-<small>&#169; <a href="https://www.facebook.com/NCXAntioquia">NCX Antioquia</a>
-</center>
--->
 </body>
 </htnl>
